Added currency fetch api
