# docs/swagger.yaml
@@ -1,5 +1,56 @@
 basePath: /
 definitions:
+  alphavantage.DailyCurrencyDataResponse:
+    properties:
+      Meta Data:
+        $ref: '#/definitions/alphavantage.MetaData'
+      Time Series (Digital Currency Daily):
+        additionalProperties:
+          $ref: '#/definitions/alphavantage.PriceDataResponse'
+        type: object
+    type: object
+  alphavantage.MetaData:
+    properties:
+      2. Digital Currency Code:
+        type: string
+      3. Digital Currency Name:
+        type: string
+      4. Market Code:
+        type: string
+      5. Market Name:
+        type: string
+      6. Last Refreshed:
+        type: string
+      7. Time Zone:
+        type: string
+    type: object
+  alphavantage.PriceDataResponse:
+    properties:
+      2a. high (INR):
+        type: string
+      2b. high (USD):
+        type: string
+    type: object
+  app.CurrenciesResponse:
+    properties:
+      code:
+        type: integer
+      data:
+        items:
+          type: string
+        type: array
+      msg:
+        type: string
+    type: object
+  app.CurrencyDataResponse:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/alphavantage.DailyCurrencyDataResponse'
+      msg:
+        type: string
+    type: object
   app.Response:
     properties:
       code:
@@ -30,7 +81,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/app.Response'
+            $ref: '#/definitions/app.CurrenciesResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -52,7 +103,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/app.Response'
+            $ref: '#/definitions/app.CurrencyDataResponse'
         "500":
           description: Internal Server Error
           schema:
