# pkg/alphavantage/model.go
@@ -1,27 +1,18 @@
 package alphavantage
 
-type PriceDataResult struct {
-	AOpenINR     string `json:"1a. open (INR)"`
-	BOpenUSD     string `json:"1b. open (USD)"`
-	AHighINR     string `json:"2a. high (INR)"`
-	BHighUSD     string `json:"2b. high (USD)"`
-	ALowINR      string `json:"3a. low (INR)"`
-	BLowUSD      string `json:"3b. low (USD)"`
-	ACloseINR    string `json:"4a. close (INR)"`
-	BCloseUSD    string `json:"4b. close (USD)"`
-	Volume       string `json:"5. volume"`
-	MarketCapUSD string `json:"6. market cap (USD)"`
+type PriceDataResponse struct {
+	CloseINR     string `json:"4a. close (INR)"`
+	CloseUSD     string `json:"4b. close (USD)"`
 }
 
-type DailyCurrencyDataResult struct {
-	MetaData struct {
-		Information         string `json:"1. Information"`
-		DigitalCurrencyCode string `json:"2. Digital Currency Code"`
-		DigitalCurrencyName string `json:"3. Digital Currency Name"`
-		MarketCode          string `json:"4. Market Code"`
-		MarketName          string `json:"5. Market Name"`
-		LastRefreshed       string `json:"6. Last Refreshed"`
-		TimeZone            string `json:"7. Time Zone"`
-	} `json:"Meta Data"`
-	TimeSeriesDigitalCurrencyDaily map[string]*PriceDataResult `json:"Time Series (Digital Currency Daily)"`
+type MetaData struct {
+	DigitalCurrencyCode string `json:"2. Digital Currency Code"`
+	DigitalCurrencyName string `json:"3. Digital Currency Name"`
+	LastRefreshed       string `json:"6. Last Refreshed"`
+	TimeZone            string `json:"7. Time Zone"`
+}
+
+type DailyCurrencyDataResponse struct {
+	MetaData                       MetaData                      `json:"Meta Data"`
+	TimeSeriesDigitalCurrencyDaily map[string]*PriceDataResponse `json:"Time Series (Digital Currency Daily)"`
 }
